--- a/chapter1.tex
+++ b/chapter1.tex
@@ -5,21 +5,21 @@
 \label{chap:Introduction}
 % 4 pages in total
 
-In 2023 56\% of the human population already lives in urban areas with the number projected to continiously increase to 68\% by 2050~\cite{who2018projections}. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favor of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways~\cite{gret2020urban}, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the urban heat-island (UHI). A UHI is a local occurrence where temperatures are higher than in surrounding rural areas, posing health risks, especially for the elderly, children or citizen with prior health-issues~\cite{martin2015alternative}, negatively impacting pedestrians comfort and other city-related topics such as water- and energy-management. The research topic of UHI's has seen a huge amount of contributions in the last two decades, but according to Steward, \textit{controlled measurement} and \textit{openness of method} are still two mayor areas of weakness~\cite{stewart2011systematic}, that are related to difficulties in taking measurements in urban areas~\cite{oke2006guideline} and a lack of rigorous methodology.\\
-There are two mayor approaches to measure the temperature of a city. The first approach is to use satellites to measure Land Surface Temperature (LST)~\cite{peng2012surface}. While allowing for an analysis of large areas without the need of ground weather-stations, this approach comes with certain downsides, such as low temporal and spatial resolution and restrictions such as only being able to measure temperatures when no clouds interfere with the microwaces send from the measuring satellite~\cite{zhang2015estimation}. The exact spatial and temporal resolution depends on the type of satellite used, with spatial resolutions of older satellites such as MODIS ranging from 1km$^2$ to 5km$^2$, while newer satellites such as LANDSAT or Sentinel 2 offer higher spatial resolutions between 10m$^2$ to 50m$^2$ per pixel. In all cases, temporal resolutions range from daily to monthly temperature values~\cite{ghent2022esalst}, depending how often the satellites pass over a certain area. These temporal resolutions are not enough to capture the microclimate of a city~\cite{voelkel2017towards}.\\
-In comparison, traditional meterological observation networks, such as operated by the German Weather Service (DWD), offer a much higher temporal resolution at 10 min intervals at 2m and 5cm through the use of ground weather stations, however they are usually only available at very low spatial resolutions, as they are used to monitor the climate at a meso-scale level. Additionally, the placement of these stations is usually not optimized for the detection of UHI's, as they are commonly placed near to airports that are not located directly in the city center. They can however be used as reference stations to get an idea about the boundaries of the climate inside a city as they offer high quality data by using high quality reference sensors and follow WHO guidelines~\cite{oke2006guideline}.\\
-Lastly, there is the possibility of deploying sensor networks to closely monitor the climate of the city. These sensor networks can either be deployed professionally by the city itself or research projects for a limited time period, in that case called testbeds, or they can be deployed by citizens themselves, in that case called citizen-owned sensor networks or private weather station networks (PWS) in the case of crowd-sensing meterological data. Well-known examples of professionally setup testbeds include the Birmingham Urban Climate Laboratory (BUCL)~\cite{chapman2015birmingham} and the Helsinki Testbed~\cite{koskinen2011helsinki} that usually focus on measuring meso-scale weather phenomena and are very costly to run and maintain.
-PWS networks can either be run by citizens themselves, such as the Sensor.Community~\footnote{\url{https://deutschland.maps.sensor.community/}, \textit{last accessed: 22.08.2023}} project, or by companies, such as Netatmo~\footnote{\url{https://weathermap.netatmo.com/}, \textit{last accessed: 22.08.2023}}, however citizens are usually directly responsible for the placement and maintenance of the individual sensors. Due to the lack of quality control, the data quality of these networks is usually not as high as the data quality of professional networks and require special data quality control (QC) steps~\cite{fenner2021crowdqc+, meier2017crowdsourcing}, however they offer a high spatial resolution depending on the provider and can be used to gain insights into the microclimate of a city. Recently, there have been efforts to combine the data from PWS networks, mainly from Netatmo, Wundermap, and Weather Underground, with data from national weather services, such as the DWD, to improve weather prediction quality. The main collaboration network in this area is EUMETNET which includes 31 european national meteorological services~\cite{hahn2022observations}.\\
-While these different approaches offer different advantages and disadvantages of measuring air temperature (TA) on the ground, they all have one thing in common: they only offer point measurements of the temperature at the location of the sensor. To get an overview of the temperature distribution across a city, various interpolation methods are needed to for example create a continuous data-layer from single point measurements, or interpolate missing data for individual sensors.
+In 2023 56\% of the human population already lives in urban areas with the number projected to continuously  increase to 68\% by 2050~\cite{who2018projections}. Combined with the ongoing climate change and urban densification due to the need for more and more living space, cities are facing many new challenges. With the removal of vegetation in favour of living space and the sealing of surfaces with heat-absorbing materials such as asphalt or concrete for streets and highways~\cite{gret2020urban}, rising temperatures lead to new phenomena that pose risks for the urban citizens. One especially critical phenomenon is the urban heat-island (UHI). A UHI is a local occurrence where temperatures are higher than in surrounding rural areas, posing health risks, especially for the elderly, children, or citizen with prior health-issues~\cite{martin2015alternative}, negatively impacting pedestrians' comfort and other city-related topics such as water- and energy-management. The research topic of UHI's has seen a huge number of contributions in the last two decades, but according to Steward, \textit{controlled measurement} and \textit{openness of method} are still two mayor areas of weakness~\cite{stewart2011systematic}, that are related to difficulties in taking measurements in urban areas~\cite{oke2006guideline} and a lack of rigorous methodology.\\
+There are two mayor approaches to measure the temperature of a city. The first approach is to use satellites to measure Land Surface Temperature (LST)~\cite{peng2012surface}. While allowing for an analysis of large areas without the need of ground weather-stations, this approach comes with certain downsides, such as low temporal and spatial resolution and restrictions such as only being able to measure temperatures when no clouds interfere with the microwaves send from the measuring satellite~\cite{zhang2015estimation}. The exact spatial and temporal resolution depends on the type of satellite used, with spatial resolutions of older satellites such as MODIS ranging from 1km$^2$ to 5km$^2$, while newer satellites such as LANDSAT or Sentinel 2 offer higher spatial resolutions between 10m$^2$ to 50m$^2$ per pixel. In all cases, temporal resolutions range from daily to monthly temperature values~\cite{ghent2022esalst}, depending how often the satellites pass over a certain area. These temporal resolutions are not enough to capture the microclimate of a city~\cite{voelkel2017towards}.\\
+In comparison, traditional meteorologicalobservation networks, such as operated by the German Weather Service (DWD), offer a much higher temporal resolution at 10 min intervals at 2m and 5cm using ground weather stations, however they are usually only available at very low spatial resolutions, as they are used to monitor the climate at a meso-scale level. Additionally, the placement of these stations is usually not optimized for the detection of UHI's, as they are commonly placed near to airports that are not located directly in the city centre. They can however be used as reference stations to get an idea about the boundaries of the climate inside a city as they offer high quality data by using high quality reference sensors and follow WHO guidelines~\cite{oke2006guideline}.\\
+Lastly, there is the possibility of deploying sensor networks to closely monitor the climate of the city. These sensor networks can either be deployed professionally by the city itself or research projects for a limited period, in that case called testbeds, or they can be deployed by citizens themselves, in that case called citizen-owned sensor networks or private weather station networks (PWS) in the case of crowd-sensing meteorological data. Well-known examples of professionally setup testbeds include the Birmingham Urban Climate Laboratory (BUCL)~\cite{chapman2015birmingham} and the Helsinki Testbed~\cite{koskinen2011helsinki} that usually focus on measuring meso-scale weather phenomena and are very costly to run and maintain.
+PWS networks can either be run by citizens themselves, such as the Sensor.Community~\footnote{\url{https://deutschland.maps.sensor.community/}, \textit{last accessed: 22.08.2023}} project, or by companies, such as Netatmo~\footnote{\url{https://weathermap.netatmo.com/}, \textit{last accessed: 22.08.2023}}, however citizens are usually directly responsible for the placement and maintenance of the individual sensors. Due to the lack of quality control, the data quality of these networks is usually not as high as the data quality of professional networks and require special data quality control (QC) steps~\cite{fenner2021crowdqc+, meier2017crowdsourcing}, however they offer a high spatial resolution depending on the provider and can be used to gain insights into the microclimate of a city. Recently, there have been efforts to combine the data from PWS networks, mainly from Netatmo, Wundermap, and Weather Underground, with data from national weather services, such as the DWD, to improve weather prediction quality. The main collaboration network in this area is EUMETNET which includes 31 European national meteorological services~\cite{hahn2022observations}.\\
+While these different approaches offer different advantages and disadvantages of measuring air temperature (TA) on the ground, they all have one thing in common: they only offer point measurements of the temperature at the location of the sensor. To get an overview of the temperature distribution across a city, various interpolation methods are needed to for example create a continuous data-layer from single point measurements or interpolate missing data for individual sensors.
 
 \section{Objective}
 
-The main objective for this work is to explore the feasability of the usage of ML models for air temperature interpolation in local urban environments. As part of this exploration, two main use-cases are discussed, namely air temperature interpolation for a single station, and areal interpolation for a wider urban environment. The main idea of air temperature interpolation for a single location is to train a ML model for that specific location and capture the relationship to surrounding neighbour sensors, which can then be used to either impute missing values for a sensor if that sensor is offline, or if there is no stationary sensor for that specific location to begin with, e.g.\ a moving sensor that moves through the urban city, to impute values while no moving sensor is currently in the area. Especially the moving sensor case could be interesting, as this could be a solution to improving the limited spatial coverage of a sensor network.\\
+The main objective for this work is to explore the feasibility of the usage of ML models for air temperature interpolation in local urban environments. As part of this exploration, two main use-cases are discussed, namely air temperature interpolation for a single station, and areal interpolation for a wider urban environment. The main idea of air temperature interpolation for a single location is to train a ML model for that specific location and capture the relationship to surrounding neighbour sensors, which can then be used to either impute missing values for a sensor if that sensor is offline, or if there is no stationary sensor for that specific location to begin with, e.g.\ a non-stationary sensor that moves through the urban city, to impute values while no moving sensor is currently in the area. Especially the moving sensor case could be interesting, as this could be a solution to improving the limited spatial coverage of a sensor network.\\
 Next, areal interpolation of air temperature is important as many research related activities commonly rely on continuous or gridded data fields in order to do analysis, and interpolation is a way of turning sensor readings at discrete locations into a gridded air temperature map. The main challenge of this approach is that there are no sensors in every location, making it hard to train supervised ML models and validate interpolation results. For this approach, commonly collected weather information, such as temperature, humidity, rain, pressure, and wind, are used in conjunction with remote sensing features such as vegetation indexes~\cite{alonso2020new}, that can indicate similarities between the environments in which the individual sensors are placed.\\
-Next to discussing the individual technical capabilities of ML models, data plays an important role of when training, testing, and operating ML models. In order to collect urban weather data, different PWS providers are compared and data collected from Netatmo and Sensor.Community. Data preprocessing steps as well as quality control (QC) is discussed to guarantee good data quality and reliable evaluation results. Additionally, feature engineering steps are discussed to capture additional information such as location, time, and more.\\
-After exploring available ML models and collecting data for training and testing, the last goal is to do an evaluation of the different ML models for both use-cases to determine the feasability and identify prediction quality and rank model performances by assessing root mean squared error (RMSE) and r-squared (R2) scores.
+Next to discussing the individual technical capabilities of ML models, data plays an important role of when training, testing, and operating ML models. To collect urban weather data, different PWS providers are compared, and data collected from Netatmo and Sensor.Community. Data pre-processing steps as well as quality control (QC) is discussed to guarantee good data quality and reliable evaluation results. Additionally, feature engineering steps are discussed to capture additional information such as location, time, and more.\\
+After exploring available ML models and collecting data for training and testing, the last goal is to do an evaluation of the different ML models for both use-cases to determine the feasibility and identify prediction quality and rank model performances by assessing root mean squared error (RMSE) and r-squared (R2) scores.
 
 \section{Structure of this work}
 
 % Strucure of the thesis
-The rest of the thesis is structured as follows: Chapter~\ref{chap:Related Work} begins with an introduction on related work. The focus topics are UHIs, one of the main motivating factors behind this work, Smart City and Sensor Networks, in order to identity new capabilities in a smart and connected urban speare, and interpolation techniques from statistics and geostatistics. In Chapter~\ref{chap:Machine Learning based Interpolation}, ML-based interpolation is introduced with a discussion of model selection criteria for air temperature interpolation and a comparison between different ML regression models which can be used for interpolation. Chapter~\ref{chap:preparations data sets} discusses data provider and collection, data preprocessing steps and quality control, as well as some feature engineering aspects. Lastly, the evaluation is done in Chapter~\ref{chap:Evaluation}, where different ML models are implemented and trained and important questions are discussed, such as among others feasability, model performances, and feature importances. Finally, Chapter~\ref{chap:Conclusion} discusses the findings of this thesis and gives an outlook into future work and research directions.
+The rest of the thesis is structured as follows: Chapter~\ref{chap:Related Work} begins with an introduction on related work. The focus topics are UHIs, one of the main motivating factors behind this work, Smart City and Sensor Networks, in order to identity new capabilities in a smart and connected urban sphere, and interpolation techniques from statistics and geostatistics. In Chapter~\ref{chap:Machine Learning based Interpolation}, ML-based interpolation is introduced with a discussion of model selection criteria for air temperature interpolation and a comparison between different ML regression models which can be used for interpolation. Chapter~\ref{chap:preparations data sets} discusses data provider and collection, data pre-processing steps and quality control, as well as some feature engineering aspects. Lastly, the evaluation is done in Chapter~\ref{chap:Evaluation}, where different ML models are implemented and trained and important questions are discussed, such as among others feasibility, model performances, and feature importance. Finally, Chapter~\ref{chap:Conclusion} discusses the findings of this thesis and gives an outlook into future work and research directions.
