--- a/chapter4.tex
+++ b/chapter4.tex
@@ -20,7 +20,7 @@ As meteorological research and analysis activities are usually in need of gridde
 
 Research suggests that for fine-granular spatio-temporal urban air temperature maps, a sensor density of at least 1 sensor per km$^{2}$ is needed~\cite{venter2020hyperlocal}, however the denser the sensor network the better the prediction quality, as even inside a single street canyon air temperatures can easily vary by 2 to 3°C~\cite{sugawara2008temperature}.
 In order to achive this sensor density as well as to gain insights into previously unobserved areas and to minimise prediction uncertainty for those areas, hybrid approaches combining stationary and moving sensors have shown to work better than purely stationary networks by covering more ground as well as reducing variability of purely mobile network setups in the context of urban temperature sensing~\cite{yang2019designing}. The combination of reference grade stationary sensors and moving sensors also shows promise in other related application, e.g.\ in the context of pollution island detection~\cite{iyer2022modeling}.\\
-In the context of this work, we discuss both ML applications and try to show the feasability and potentials of ML-based interpolation in the context of urban air temperature sensing.
+In the context of this work, we discuss both ML applications and try to show the feasibility and potentials of ML-based interpolation in the context of urban air temperature sensing.
 In the following, we introduce several ML algorithms that can be used for regression tasks and discuss how they need to be adapted in order to solve interpolation tasks as well as the advantages and disadvantages of each model. The models will be implemented as prototypes and evaluated in Chapter~\ref{chap:Evaluation}.
 
 \section{Model Selection Criteria}
@@ -43,7 +43,7 @@ Next to the adaptations that need to be made in order to fit regression algorith
     The reliability of the model is determined by the training data as well as the model architecture, as f.e.\ training data that is not representative of the underlying function can introduce bias into the model or can prevent the model from learning the correct function. Another important factor is the data quality, as more noise can result in worse model performance. Lastly, reliability of the model is also determined by the ability of the model to handle missing or sparse data as well as outliers. This is especially important in our context as we try to integrate moving sensors into the interpolation process, which sense data at different times and locations.
     \item \textbf{Extrapolation Capabilities:} One important factor to consider, especially when using a model with previously unseen data, is the ability to extrapolate data. Linear regression models f.e.\ try to fit a linear function that can be easily used with data that is bigger/smaller than previously seen training data as the function is continuous. In comparison, regression trees by default do not allow for extrapolation. Also, Neural Networks (NNs) typically perform unpredictably on unseen data.
     \item \textbf{Amount of Training Data:} The amount of training data required to train the model is another important factor to consider, as some models require more training data than others. Especially neural networks tend to need more training data than other models, as they have lots of parameters that need to be tuned. In our context, the amount of data available is quite limited, therefore models that require less training data are preferred.
-    \item \textbf{Handling of Missing Data:} If the model cannot handle missing data well, there might be additonal data preprocessing steps that need to be done. One example for this would be how the model reacts to not a number (NaN) values which is a float number defined in the IEEE 754 floating-point standard~\cite{ieee754}. Each multiplication with NaN results in NaN, which can therefore lead to a model where all weights turn into NaN when there is a single NaN value in the input data. This is especially important in the context of distributed sensors, as they might not sense every feature at all times. Common strategies to handle missing values involve dropping the complete feature if it has any NaN, drop any rows in the data that has NaN values or imputation, e.g.\ replace the missing value with a value such as the mean or median of the feature.
+    \item \textbf{Handling of Missing Data:} If the model cannot handle missing data well, there might be additonal data pre-processing steps that need to be done. One example for this would be how the model reacts to not a number (NaN) values which is a float number defined in the IEEE 754 floating-point standard~\cite{ieee754}. Each multiplication with NaN results in NaN, which can therefore lead to a model where all weights turn into NaN when there is a single NaN value in the input data. This is especially important in the context of distributed sensors, as they might not sense every feature at all times. Common strategies to handle missing values involve dropping the complete feature if it has any NaN, drop any rows in the data that has NaN values or imputation, e.g.\ replace the missing value with a value such as the mean or median of the feature.
     \item \textbf{Handling of Sparse Data:} Similar to missing data, handling of sparse data is also really important to prevent problems such as the NaN problem mentioned previously. The main difference to missing data is that sparse data is not missing, but rather not available at all times. In our context, moving sensors would be an example for sparse data, as they only sense data at certain times and locations. The strategies to handle missing data are also similar to those of missing data, but imputation and interpolation are more common strategies to handle sparse data.
     \item \textbf{Model Performance:} The more complex a model is, generally speaking, the more training data it needs to fine-tune all it's weights and the longer it takes to train, either due to the amount of data or the amount of steps that need to be taken when updating weights in the training process. In the context of open-source and citizen participation less complex models are preferred, as they can be trained and deployed with less resources. However, a less complex model could have the downside of not being able to fit the underlying data as well as a more complex model, therefore there is a trade-off between model complexity and model performance. Another factor is the capability of handling many locations and data points, as some models' performance degrades significantly when the amount of data points increases, as well as the ability to handle high-dimensional data.
     \item \textbf{Model Capabilities vs. Interpretability:} A common trade-off in ML models is between model capabilities and complexity and interpretability of the model as done by~\cite{zumwald2021mapping}, as `Neural network and deep learning approaches allow for large flexibility and predictive power but are harder to interpret than ensemble-based approaches which allow for the required flexibility, while still providing insights into the algorithms' inner workings, e.g.\ via variable importance and prediction uncertainty estimation'.
@@ -117,7 +117,7 @@ Hengl et al.~\cite{hengl2018random} adapted the RF algorithm to take advantage o
 
 \begin{itemize}
     \item Geographical coordinates (north, east)
-    \item Euclidean distances to reference points (center, edges) of the study area 
+    \item Euclidean distances to reference points (centre, edges) of the study area 
     \item Euclidean distances to sampling locations, e.g.\ distance matrices also used in geostatistics
     \item Downslope distances for hydrological analysis
     \item Resistance distances or weighted buffer distances
@@ -146,7 +146,7 @@ The downsides of RF according to them include:
 Lastly, they also concluded, that the reduction of trees in the forest from 500 to 100 often didn't result in a big loss in accuracy, suggesting that simpler RF models can retain high levels of accuracy.\\
 \textit{Sekuli{\'c} et al.} further improved RFsp and introduced Random Forest for Spatial Interpolation (RFSI)~\cite{sekulic2020random} by including nearest observations and distances as covariantes. They compared their model performance against OK, RFsp, IDW, NN, and trend surface mapping~\cite{chorley1965trend} to compare the performance across one syntetic dataset, one precipitation dataset, and one mean daily temperature dataset for Crotia 2008 with a resolution of 1km$^2$. In the real case-studies. RFSI outperformed the other methods with a RMSE in the mean daily temperature mapping case-study of 1.4 compared to RF and RFsp with RMSE 1.6, IDW with 1.8 and Space-Time Regression Kriging with 2.4. The covariants to model daily mean temperature were: latitude, longitude, distance-to-coastline, elevation, seasonal fluctuation, insolation (total incoming solar radiation), and Moderate Resolution Imaging Spectroradiometer land surface temperature (MODIS LST). They found that `Seasonal fluctuation, MODIS LST images, insolation, and distance-to-coastline were the most important covariates for RF and RFsp', while in RFSP the observations from ground stations as covariants were the most important.\\
 In~\cite{venter2020hyperlocal} \textit{Venter et al.} mapped air temperature over Oslo, Norway in 2018 on a scale of 10-30m using Sentinel, Landsat, LiDAR data which they combine with Netatmo PWS data from 1310 stations. They achive an average RMSE of 0.52 °C (R2 = 0.5), 1.85 °C (R2 = 0.05) and 1.46 °C (R2 = 0.33) for annual mean, daily maximum, and minimum air temperature. The `models performed best outside of summer months when the spatial variation in temperatures were low and wind velocities were high'.\\
-Similarly, \textit{Zumwald et al.} mapped hourly air temperature on a 10m$^2$ grid during a heat wave from 25-29th June 2021 in Zurich (Switzerland) and compared reference sensors, AWEL sensors and PWS data from Netatmo stations and achived RMSEs of 1.43°C, 1.35°C, and 1.71°C for the respective types. They used QRF as their ML model of choice. Important features in their work were air temperature at 2m (33\%), air temperature at 5cm (21\%), relative humidity at 2m (13\%), global radiation (8\%), and more.\\
+Similarly, \textit{Zumwald et al.} mapped hourly air temperature on a 10m$^2$ grid during a heat wave from 25-29th June 2021 in Zurich (Switzerland) and compared reference sensors, AWEL sensors and PWS data from Netatmo stations and achived RMSEs of 1.43°C, 1.35°C, and 1.71°C for the respective types~\cite{zumwald2021mapping}. They used QRF as their ML model of choice. Important features in their work were air temperature at 2m (33\%), air temperature at 5cm (21\%), relative humidity at 2m (13\%), global radiation (8\%), and more.\\
 Both~\cite{zumwald2021mapping, zhang2012bias} found that there seems to be a systematic bias when estimating air temperature using RF to underestimate high temperatures and overestimate low temperatures.
 
 \subsection{Histogram-Based Gradient Boosting}
