--- a/references.bib
+++ b/references.bib
@@ -995,6 +995,14 @@ Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
   publisher={Williams \& Wilkins}
 }
 
+@article{haining2001spatial,
+  title={Spatial autocorrelation},
+  author={Haining, RP},
+  year={2001},
+  publisher={Elsevier},
+  doi={10.1016/B0-08-043076-7/02511-0}
+}
+
 @article{chorley1965trend,
   title={Trend-surface mapping in geographical research},
   author={Chorley, Richard John and Haggett, Peter},
