--- a/appendix_general.tex
+++ b/appendix_general.tex
@@ -2,7 +2,7 @@
 
 % TODO: show parameters for sklearn models
 
-\section{Sklearn Machine Learning Model Parameters for Single Station Interpolation}
+\section{Sklearn Model Parameters for Single Station Interpolation}
 \label{appendix: sklearn ml parameters single station}
 
 \begin{lstlisting}[language=Python, caption=Random Forest Regressor Parameters]
@@ -27,6 +27,17 @@ n_iter_no_change=10, tol=1e-07, verbose=0, random_state=42)
 \end{lstlisting}
 
 The number of max iterations was increased from the default value of 100 to 200 to improve the performance of the model and the random state was set to 42 so all interations yield the same result.
+
+\section{Feature Engineering}
+
+\begin{lstlisting}[language=Python, caption=Timestamp to Sinus Curve Feature, label=lst: timestamp to sin]
+    # Convert datetime64 timestamp hours and minutes to circle angle
+    filtered_gdf['time'] = filtered_gdf['time'].apply(lambda x: (x.hour * 60 + x.minute) * 2 * np.pi / (24 * 60))
+    filtered_gdf.rename(columns={'time': 'time_angle'}, inplace=True)
+
+    # Calculate continuous representation of time as an angle in radians
+    filtered_gdf['sin_time'] = np.sin(filtered_gdf['time_angle'])
+\end{lstlisting}
 
 \section{Histogram-based Gradient Boosting Single Location Interpolation}
 
