--- a/appendix_sensor_community.tex
+++ b/appendix_sensor_community.tex
@@ -1,3 +1,3 @@
-\section{Sensor Community}
+\section{Sensor.Community}
 
 \lstinputlisting[language=C,caption=Sensor Distribution by Country,label=sensor_community_sensors_by_countries]{appendix/sensor_community_sensor_countries.json}
